.helper/ingress-to-nas-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-srv
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: external-srv
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: external-srv
subsets:
  - addresses:
      - ip: "192.168.100.10"
    ports:
      - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ${DOMAIN}-letsencrypt-issuer
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: 4G
  labels:
    app: nas
  name: nas
  namespace: external-srv
spec:
  ingressClassName: nginx
  rules:
    - host: nas.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nas.${DOMAIN}
      secretName: nas.${DOMAIN}-tls
